--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,7 +35,9 @@ Imports:
     MASS,
     stats,
     sf,
-    slider
+    slider,
+    progressr,
+    vctrs
 Suggests:
     testthat (>= 2.1.0),
     knitr,
@@ -44,7 +46,7 @@ Suggests:
     rgdal,
     INLA,
     lme4
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.2
 VignetteBuilder: knitr
 Depends: 
     R (>= 2.10)
