--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,17 +7,17 @@ S3method(extract_yhat,lm)
 S3method(extract_yhat,merMod)
 S3method(sample_yhat,inla)
 S3method(sample_yhat,lm)
-export(build_key_matrix)
-export(build_zones)
 export(calculate_alarm_type)
+export(calculate_surveillance_residuals)
+export(call_alarm_function)
 export(collapse_yhat)
-export(convert_to_surveillance)
 export(ensure_zones)
 export(extract_alarm_statistic)
 export(extract_clusters)
 export(extract_yhat)
 export(generate_date_range)
 export(generate_study_area)
+export(key_matrix_to_zones)
 export(loop_alarm_function)
 export(loop_extract_yhat)
 export(loop_model)
@@ -28,13 +28,13 @@ export(parallel_shewhart_gaussian)
 export(pivot_for_scan)
 export(report_model_coeff)
 export(report_model_summary)
+export(rowmute)
 export(sample_yhat)
 export(scan_cusum_poisson)
 export(scan_eb_negbin_fast)
 export(scan_eb_poisson_fast)
 export(space_coord_to_zones)
-export(standardized_alarm_functions)
-export(standardized_alarm_multicol)
+export(zones_to_key_matrix)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
 importFrom(rlang,.env)
