Tidied up prepare_prediction_data.R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(parallel_cusum_gaussian)
 export(parallel_cusum_poisson)
 export(parallel_shewhart_gaussian)
 export(pivot_for_scan)
+export(prepare_prediction_data)
 export(report_model_coeff)
 export(report_model_summary)
 export(rowmute)
@@ -34,6 +35,7 @@ export(scan_cusum_poisson)
 export(scan_eb_negbin_fast)
 export(scan_eb_poisson_fast)
 export(space_coord_to_zones)
+export(window_idtime)
 export(zones_to_key_matrix)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
