--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,6 @@ Imports:
     spdep,
     scanstatistics,
     arm,
-    broom,
     simplecache,
     magrittr,
     dplyr,
@@ -37,7 +36,10 @@ Imports:
     sf,
     slider,
     progressr,
-    vctrs
+    vctrs,
+    generics,
+    broom,
+    broom.mixed
 Suggests:
     testthat (>= 2.1.0),
     knitr,
