Adding tests and documentation for extract_yhat

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,14 +2,13 @@
 
 S3method(extract_yhat,Arima)
 S3method(extract_yhat,default)
-S3method(extract_yhat,forecast_ARIMA)
 S3method(extract_yhat,inla)
 S3method(extract_yhat,merMod)
+export(arima_tidy)
 export(augment)
 export(calculate_alarm_type)
 export(calculate_surveillance_residuals)
 export(call_alarm_function)
-export(collapse_yhat)
 export(ensure_zones)
 export(extract_alarm_statistic)
 export(extract_clusters)
