Improving the collapse functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ export(augment)
 export(calculate_alarm_type)
 export(calculate_surveillance_residuals)
 export(call_alarm_function)
+export(collapse)
+export(collapse_all)
 export(ensure_zones)
 export(extract_alarm_statistic)
 export(extract_clusters)
@@ -36,6 +38,7 @@ export(scan_cusum_poisson)
 export(scan_eb_negbin_fast)
 export(scan_eb_poisson_fast)
 export(space_coord_to_zones)
+export(unlist_scalars)
 export(window_idtime)
 export(zones_to_key_matrix)
 importFrom(generics,augment)
