Cleaning up, moving forward

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,12 +18,13 @@ export(ensure_zones)
 export(extract_alarm_statistic)
 export(extract_clusters)
 export(extract_yhat)
-export(generate_date_range)
-export(generate_study_area)
 export(key_matrix_to_zones)
 export(parallel_cusum_gaussian)
+export(parallel_cusum_gaussian2)
 export(parallel_cusum_poisson)
+export(parallel_cusum_poisson2)
 export(parallel_shewhart_gaussian)
+export(parallel_shewhart_gaussian2)
 export(pivot_for_scan)
 export(prepare_prediction_data)
 export(report_model_coeff)
@@ -33,6 +34,7 @@ export(scan_cusum_poisson)
 export(scan_eb_negbin_fast)
 export(scan_eb_poisson_fast)
 export(space_coord_to_zones)
+export(st_select_overlap)
 export(unlist_scalars)
 export(window_idtime)
 export(zones_to_key_matrix)
