--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,8 @@ Description: A set of tools for performing routine statistical surveillance.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+URL: https://github.com/CO-TEEO/statsurv
+BugReports: https://github.com/CO-TEEO/statsurv/issues
 Imports:
     rlang,
     tibble,
