--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,8 @@ Description: A set of tools for performing routine statistical surveillance.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-URL: https://github.com/CO-TEEO/statsurv
+URL: https://github.com/CO-TEEO/statsurv,
+    https://co-teeo.github.io/statsurv/
 BugReports: https://github.com/CO-TEEO/statsurv/issues
 Imports:
     rlang,
